# notion-python

./: README.md  pyproject.toml  setup.py
notion/: client.py
