[tool.poetry]
name = "notion-python-2"
version = "0.1.2"
description = "API wrapper for Notion written in Python"
authors = ["Juan Carlos Rios <juankrios15@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "notion"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

